# cotlgif

./: .gitignore  Cargo.toml  config.toml  notes.md  petpet.spine
assets/: petpet.atlas  petpet.skel  worshipper_data.json
cotl/: Beholder.atlas  Beholder.skel  Bird.atlas  Bird.skel  Brute.atlas  Brute.skel  Charger.atlas  Charger.skel  Chest.atlas  Chest.skel  Crab.atlas  Crab.skel  CrownBig.atlas  CrownBig.skel  DeathBig.atlas  DeathBig.skel  DeathCat.atlas  DeathCat.skel  DeathCat_Boss.atlas  DeathCat_Boss.skel  DeathCat_Eyeball.atlas  DeathCat_Eyeball.skel  DeathCat_Spirit.atlas  DeathCat_Spirit.skel  DecorationShopGuy.atlas  DecorationShopGuy.skel  DecorationShopGuyFish.atlas  DecorationShopGuyFish.skel  Demon.atlas  Demon.skel  DoorGuardians_2.atlas  DoorGuardians_2.skel  Enemies_Bat.atlas  Enemies_Bat.skel  FireCultMoth.atlas  FireCultMoth.skel  Fisherman.atlas  Fisherman.skel  Floater.atlas  Floater.skel  (+109 more)
cotlgif/: Cargo.toml
cotlgif-common/: Cargo.toml
cotlgif-common/src/: colours.rs  config.rs  data.rs  lib.rs  slugify.rs
cotlgif-http/: Cargo.toml
cotlgif-http/src/: lib.rs  params.rs  util.rs  x_real_ip.rs
cotlgif-imgproc/: Cargo.toml
cotlgif-imgproc/src/: lib.rs  resize.rs
cotlgif-render/: Cargo.toml
cotlgif-render/src/: data.rs  lib.rs  petpet.rs  spine.rs
cotlgif/src/: main.rs
html/: index.dev.html  index.html  index.spoilers.html
pyutil/: .gitignore  clean_log.py  extract.py  hashpw.py  populate_config.py  requirements.txt  send_log.py  skinck.py  update-sprites.sh  worshipper_data.py
sprites/: .gitignore  draw.py
src/: actor.rs  actors.rs  colours.rs  http.rs  impls.rs  main.rs  petpet.rs  render.rs  resize.rs  text.rs  util.rs
static/: index.0260416a.js  index.0e00c94a.js  index.23956801.js  index.28396e98.js  index.3fb5396e.js  index.4b3f2cf1.js  index.54d91896.js  index.5745691c.css  index.8bd05835.js  index.910abc60.js  index.99b60894.css  index.a862b60e.js  index.abdcbeaa.js  index.ae8d7e2d.js  index.b1d7f670.css  index.c1a48735.js  index.c54d6ba1.js  index.ce745508.js  index.d9b4ddfc.js  index.dev.html  index.e4617a29.css  index.f1782740.js  index.f47f7985.css  index.fb640620.js  index.html  sprites.css
web/: index.html  package-lock.json  package.json  update.sh  vite.config.js
web/src/: App.svelte  index.scss  main.js
web/src/lib/: Color.svelte  ColourPicker.svelte  Dropdown.svelte  LoginModal.svelte  Scale.svelte  SingleFrame.svelte  WelcomeModal.svelte
