[package]
name = "cotlgif"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty_spine = { path = "../rusty_spine", features = ["use_libc", "spine38"] }
sfml = "0.18.1"

imgref = "1.9.4"
gifski = "1.7.2"
rgb = "0.8.34"

