[package]
name = "cotlgif"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty_spine = { path = "../rusty_spine", features = ["use_libc", "spine38"] }
sfml = "0.18.1"

imgref = "1.9.4"
gifski = "1.7.2"
rgb = "0.8.34"
fast_image_resize = "1.0.0"

png = "0.17"

tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
futures-channel = "0.3"
axum = { version = "0.5.16", features = ["json", "query", "http2"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
color-eyre = "0.6.2"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tower-http = { version = "*", features = ["trace", "fs"] }
once_cell = "1.15.0"
css-color-parser2 = "1.0.1"
regex = "1.6.0"

clap = { version = "4.0.18", features = ["derive"] }
toml = "0.5.9"
