[package]
name = "cotlgif-http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
futures-channel = "0.3"
axum = { version = "0.5.16", features = ["json", "query", "http2"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
color-eyre = "0.6.2"
tracing = "0.1.37"
tower-http = { version = "*", features = ["trace", "fs"] }
once_cell = "1.15.0"
css-color-parser2 = "1.0.1"
regex = "1.6.0"
