[package]
name = "cotlgif-http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
futures-channel = "0.3"
axum = { version = "0.6.7", features = ["json", "query", "http2", "macros", "headers"] }
headers = "0.3.8"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
color-eyre = "0.6.2"
tracing = "0.1.37"
tower-http = { version = "*", features = ["trace", "fs"] }
tower-cookies = "0.9.0"
cookie = "*"
once_cell = "1.15.0"
css-color-parser2 = "1.0.1"
regex = "1.6.0"
rgb = "0.8.34"
argon2 = "0.4.1"
password-hash = { version = "*", features = ["std"] }
jsonwebtoken = { version = "8.2.0", default-features = false }
governor = "0.5.1"
nonzero_ext = "0.3.0"
cotlgif-common = { path = "../cotlgif-common" }
cotlgif-render = { path = "../cotlgif-render" }
