[package]
name = "cotlgif-render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty_spine = { git = "https://github.com/pocams/rusty_spine", features = ["use_libc", "spine38"] }
regex = "1.7.0"
tracing = "0.1.37"
sfml = "0.18.1"
once_cell = "1.16"
thiserror = "1.0.37"
cotlgif-common = { path = "../cotlgif-common" }
singlyton = "4.1.1"
